--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>La Provence</title>
+		<title>La Provencale</title>
 		<meta charset="utf-8">
 	  <link rel="stylesheet" href="css/style.css">
 	</head>
@@ -10,8 +10,8 @@
 
 		<div class="banner">
 			<div class="container">
-				<h1>La Provence</h1>	
-				<h2>Découvrez ma magnifique région</h2>
+				<h1>La Provençale</h1>	
+				<h2>La boutique 100% Provence</h2>
 			</div>
 		</div>
 
