--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<div class="container">
 				<h1>La Provençale</h1>	
 				<h2>La boutique 100% Provence</h2>
+				<a href="#apply-section" class="btn-pink">Inscrivez-vous</a>
 			</div>
 		</div>
 
@@ -29,11 +30,15 @@
     		<h3>Découvrir les environs</h3>
     	</div>
     	<div class="card" id="reseaux">
-    		<img src="images/facebook.png" alt="Facebook">
-    		<img src="images/insta.png" alt="Instagram">
-    		<img src="images/linkedin.png" alt="LinkedIn">
+    		<a href="https://www.facebook.com/melia.bourillon.7" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
+    		<a href="https://www.instagram.com/melia_brn/?hl=fr" target="_blank"><img src="images/insta.png" alt="Instagram"></a>
+    		<a href="https://www.linkedin.com/mwlite/in/melia-bourillon-a35381172" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
     		<h3>Follow me!</h3>
     	</div>
+		</div>
+
+		<div id="apply-section">
+			<div class="typeform-widget" data-url="https://form.typeform.com/to/ETZL6Rt6?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 		</div>
 
 	</body>
